--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>First html page!</h1>
-        <p1>Hello testing this paragraph (and this commit 2)!</p1>
+        <p1>Hello testing this paragraph (forced pushed)!</p1>
     </body>
 </html>
     
