minor adjustment to website name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title> The Website! </title>
+    <title> Asads Website </title>
     <link rel="icon" href="resources/icons/yume_nikki_door.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
