fixed lancer button issues (not noticable enough), added text changing for each click until 17

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img id="snake" src="resources/icons/venom_snake_face.jpg">
                 <img id="doakes" src="resources/icons/bay_harbour_butcher.jpg">
 
-                <button id="lancer_button" onclick="play()">WELCOME!</button>
+                <button id="lancer_button" onclick="play(); clickMe();">WELCOME!<br><p>(click me)</p></button>
             </div> 
         </header>
 
@@ -222,7 +222,7 @@
 
                     <br><br><a href="https://chiralacid.github.io/">Website Link</a>
                     <br><a target="_blank" rel="noopener noreferrer" href="https://github.com/chiralacid/chiralacid.github.io">Source Code</a>
-                    <br><a id="cat_button" target="_blank" rel="noopener noreferrer" href="#" onclick="randomCat()">Random Cat Link</a>
+                    <br><a id="cat_button" target="_blank" rel="noopener noreferrer" onclick="randomCat()">Random Cat Link</a>
                     </p> 
                 </div> 
 
