cutting paragraphs length commit

--- a/index.html
+++ b/index.html
@@ -99,11 +99,9 @@
                         convolutional neural network to predict handwritten digits. I created the model as a study 
                         to help understand parts of a neural network and how training data affects the model's performance. 
                         
-                        <br><br>The model consists of: 
-                        two convolution layers to convert the input to feature maps. Two activation layers using ReLu 
-                        and max pooling to break linearity and reduce spatial size. Two intermediate linear layers to 
-                        flatten features for the next layer, and a final flatten layer for the output (view). I also 
-                        added a dropout layer to reduce overfitting.
+                        <br><br>The model consists of two layers for: 
+                        convolution, activation (using ReLu/max pooling), and intermediate linear layers to 
+                        flatten features. I also added a dropout layer to reduce overfitting.
 
                         <br><br><a target="_blank" rel="noopener noreferrer" href="https://github.com/chiralacid/digit_recognition_cnn">Source code</a>
                     </p> 
@@ -150,7 +148,7 @@
                     <p>Developed a soccer bot for a competition. I assembled the bot with a kit, wired it, and created
                         a bracket model for it (as seen in slide 1). 
                                             
-                        <br><br>Using pre-existing source code, I made macro buttons for the bot to spin faster, utilizing
+                        <br><br>I made macro buttons for the bot to spin faster, utilizing
                         the back to hit the ball. The bracket design on the front (golden) was designed in
                         OnShape while the back bracket (green) was improvised to due printing issues. 
 
@@ -264,15 +262,15 @@
 
                 <div>
                     <video class="autopause" controls src="resources/video/AI_Battlez_Demo.mp4"></video>
-                    <h3>USER vs AI Fighting Game</h3>
+                    <h3>PVE Fighting Game</h3>
                     <p>A text-only fighting game made in Java. 4 characters can be chosen to face off against a computer. 
-                        3 options are available for actions, Attack with chance of a critical (extra damage), Defend 
-                        with a chance of parrying (reflects damage), and Ultimate, unlocked with 3 criticals.
+                        The player can Attack with chance of a critical (extra damage), Defend 
+                        with a chance of parrying (reflects damage), or use an Ultimate (>3 criticals).
 
-                        <br><br>The computer plays based on a risk reward weighting system. The computer
-                        may reset it's strategy if it is not working out by zeroing variables or go all out if it
-                        has nothing to lose. The computer will also adjust it's playstyle based on the characters 
-                        such as Spongebob, who has a high risk high reward playstyle.
+                        <br><br>The computer plays based on a risk reward weighting system. It
+                        may change strategies if it's not working out by zeroing or go all out when it
+                        has nothing to lose. It also adjusts it's playstyle based on the characters 
+                        such as Spongebob (high-risk high-reward).
 
                         <br><br><a target="_blank" rel="noopener noreferrer" href="https://github.com/chiralacid/battlez_">Source code</a>
                     </p> 
