--- a/index.html
+++ b/index.html
@@ -567,7 +567,8 @@
                 interesting to me or not, I always find something to appreciate in it.
 
                 <br><br> I enjoy many things outside of hardware engineering and programming like: 
-                chemistry, astronomy, media production, motorcycles, and videos games just to name a few. 
+                chemistry, astronomy, media production, fishing, motorcycles, and videos games, 
+                just to name a few. 
                 The current game I'm playing is Deltarune which is the first indie type RPG I've played, it's
                 a fun game if you want to test your patience.
                  
