--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         <audio id="yume_nikki_theme" preload="none" 
                             src="resources/audio/Yume_Nikki_OST_The Snowy World.m4a"></audio>
                         <button onclick="changePageBackground()">
-                        <div id="click_text">CLICK ME FOR ORIGINAL!!<br><br>[YUMENIKKI THEMED]</div></button>
+                        <div id="click_text">CLICK ME FOR ORIGINAL!!<br><br>[YUME NIKKI THEME]</div></button>
                     </div>
                     <p>
                     <br><br><a href="https://chiralacid.github.io/">Website Link</a>
